--- a/package.json
+++ b/package.json
@@ -25,12 +25,15 @@
     "@babel/preset-typescript": "^7.21.4",
     "babel-loader": "^9.1.2",
     "clean-webpack-plugin": "^4.0.0",
+    "css-loader": "^6.7.3",
     "css-minimizer-webpack-plugin": "^5.0.0",
     "dotenv": "^16.0.3",
     "html-webpack-plugin": "^5.5.1",
     "mini-css-extract-plugin": "^2.7.5",
+    "node-sass": "^8.0.0",
     "sass": "^1.62.0",
     "sass-loader": "^13.2.2",
+    "style-loader": "^3.3.2",
     "terser-webpack-plugin": "^5.3.7",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.13.3",
